k8s/overlays/development/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mastodon
spec:
  rules:
  - host: ykzts.technology
    http:
      paths:
      - backend:
          serviceName: mastodon-web
          servicePort: 3000
      - path: /api/v1/streaming/*
        backend:
          serviceName: mastodon-streaming
          servicePort: 4000
      - path: /assets/*
        backend:
          serviceName: mastodon-assets
          servicePort: 80
      - path: /packs/*
        backend:
          serviceName: mastodon-assets
          servicePort: 80
      - path: /emoji/*
        backend:
          serviceName: mastodon-assets
          servicePort: 80
